--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "name": "strong-pubsub",
-  "version": "0.0.0",
-  "description": "PubSub for Node.js, Browser, Mobile and IoT",
+  "version": "0.1.0",
+  "description": "Reliable PubSub",
   "main": "index.js",
-  "browser": "browser.js",
   "scripts": {
-    "pretest": "jscs . && jshint .",
     "test": "mocha"
   },
   "author": "Ritchie Martori",
   "license": {
     "name": "Dual MIT/StrongLoop",
     "url": "https://github.com/strongloop/strong-pubsub/blob/master/LICENSE"
-  },
-  "devDependencies": {
-    "browserify": "^9.0.3",
-    "chai": "^1.10.0",
-    "jscs": "^1.7.3",
-    "jshint": "^2.5.6",
-    "mocha": "^1.19.0"
   }
 }
