Use strongloop conventions for licensing

--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "test": "mocha"
   },
   "author": "Ritchie Martori",
-  "license": {
-    "name": "Dual MIT/StrongLoop",
-    "url": "https://github.com/strongloop/strong-pubsub/blob/master/LICENSE"
-  },
+  "license": "MIT",
   "devDependencies": {
     "mocha": "^2.2.1",
     "strong-pubsub-test": "*"
