--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha"
   },
-  "author": "Ritchie Martori",
+  "author": "IBM Corp.",
   "license": "MIT",
   "devDependencies": {
     "mocha": "^2.2.1",
